syntax = "proto3";

package sync.entities;

message CounterBody {
  string name = 1;
  int64 value = 2;
}

message IncrementCounter {
  int64 id = 1;
}

message DecrementCounter {
  int64 id = 1;
}

message SetCounterValue {
  int64 id = 1;
  int64 value = 2;
}

message CreateCounter {
  int64 clientSideId = 1;
  string name = 2;
  int64 initialValue = 3;
}

message DeleteCounter {
  int64 id = 1;
}

message RenameCounter {
  int64 id = 1;
  string newName = 2;
}
